[metadata]
name=BottleSessions
version=21.07.01
author = gunville
author_email = rk13088@yahoo.com
description = Sessions middleware plug-in for Bottle
long_description = file: README.md
license_files = License.txt
url = github
project_urls =
    repo = TBD
classifiers = 
    Development Status :: 5 - Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Bottle
keywords='bottle cachelib sessions redis memcached'
[options]
package_dir = 
    = src
packages = find:
install_requires =
    bottle>=0.12.0
    cachelib>=0.2.0
python_requires = >=3.6

[options.packages.find]
where = src